# jobgenie-ai

./: .gitignore
apps/: src - Shortcut.lnk
apps/api/: main.py  pyproject.toml  ruff.toml  src.tar
apps/api/migrations/: env.py
apps/api/migrations/versions/: 5bfd9d7295ff_create_resumes_table.py  b4382f4ef6ab_add_parsed_data_to_resumes.py  b9146812449b_create_users_table.py
apps/api/src/: main.py
apps/api/src/ai/: extractor.py  parser.py  prompts.py
apps/api/src/api/: router.py
apps/api/src/api/v1/: auth.py  health.py  job.py  matching.py  resume.py
apps/api/src/core/: config.py  constants.py  security.py
apps/api/src/crud/: job.py  resume.py  user.py
apps/api/src/db/: base.py  session.py
apps/api/src/models/: __init__.py  job.py  resume.py  user.py
apps/api/src/schemas/: ats.py  job.py  matching.py  parsed_resume.py  resume.py  user.py
apps/api/src/services/: auth_service.py  job_service.py  matching_service.py  resume_ai_service.py  resume_service.py
apps/web/: package-lock.json
