[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.2.1",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "ruff>=0.15.22",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
